<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">WanAndroid</string>

    //other
    <string name="mainActivity_back">再按一次退出WanAndroid</string>
    <string name="loading">loading</string>

    //home
    <string name="homeFragment_home">首页</string>
    <string name="homeFragment_hierarchy">体系</string>
    <string name="homeFragment_project">项目</string>
    <string name="homeFragment_mine">我的</string>
    <string name="articleActivity_support">网页由WanAndroid网站提供\n
                                            \t\t www.wanandroid.com</string>
    <string name="articleActivity_share">分享</string>
    <string name="articleActivity_collection" tools:ignore="ExtraTranslation">收藏</string>
    <string name="articleActivity_copy">复制链接</string>
    <string name="articleActivity_browser">用系统浏览器打开</string>
    <string name="articleActivity_share_text">来自WanAndroid的分享:</string>
    <string name="articleActivity_browser_error">该链接无法使用浏览器打开</string>
    <string name="articleActivity_copy_success">复制成功</string>
    <string name="articleActivity_cancel_collection">取消收藏</string>

    //mine
    <string name="mineFragment_tvLogin">登陆</string>
    <string name="mineFragment_tvCollect">我的收藏</string>
    <string name="mineFragment_tvSetting">设置</string>
    <string name="mineFragment_tvAboutUs">关于我们</string>
    <string name="mineFragment_tvLogout">退出登陆</string>
    <string name="mineFragment_confirm_logout">确认退出登陆？</string>
    <string name="mineFragment_logout_toast">提示</string>
    <string name="mineFragment_logout_cancel">取消</string>
    <string name="mineFragment_logout_confirm">确认</string>

    <string name="loginActivity_account">用户名</string>
    <string name="loginActivity_password">密码</string>
    <string name="loginActivity_sign_in">登陆</string>
    <string name="loginActivity_register">没有账号?注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="loginActivity_error_account_empty">用户名不能为空</string>
    <string name="loginActivity_error_password_empty">密码不能为空</string>
    <string name="loginActivity_success">登陆成功</string>

    <string name="registerActivity_account">用户名</string>
    <string name="registerActivity_password">输入密码</string>
    <string name="registerActivity_password_again">再次输入密码</string>
    <string name="registerActivity_register">注册</string>
    <string name="registerActivity_sign_in">已有账号?登陆</string>
    <string name="registerActivity_error_account_empty">用户名不能为空</string>
    <string name="registerActivity_error_password_empty">密码不能为空</string>
    <string name="registerActivity_error_password_invalid">密码长度必须大于6</string>
    <string name="registerActivity_error_passwordAgain_invalid">两次输入的密码不一致</string>
    <string name="registerActivity_register_success">注册成功</string>

    <string name="aboutActivity_about_us">关于我们</string>

    //navigation
    <string name="navigationActivity_tlTitle">导航</string>

    //search
    <string name="searchActivity_hint">输入关键字搜索更多</string>
    <string name="searchActivity_hint2">暂无搜索历史</string>
    <string name="searchActivity_hint3">暂无热词</string>
    <string name="searchActivity_no_data">暂无数据</string>
    <string name="searchActivity_search">搜索</string>


    //error
    <string name="error_nothing">获取不到数据</string>
    <string name="error_timeout">网络连接超时</string>
    <string name="error_unavailable">网络不可用</string>
    <string name="error_unknown">未知错误</string>
    <string name="loading_error">出错啦！点击空白处刷新</string>

    //behaviour
    <string name="behaviour_bottom_nav">com.example.hy.wanandroid.widget.behaviour.BottomNavBehaviour</string>
    <string name="behaviour_fbtn">com.example.hy.wanandroid.widget.behaviour.FbtnBehaviour</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

</resources>
