<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_home"
        android:title="@string/homeFragment_home"
        android:icon="@drawable/ic_main_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_hierarchy"
        android:title="@string/homeFragment_hierarchy"
        android:icon="@drawable/ic_main_hierarchy"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_project"
        android:title="@string/homeFragment_project"
        android:icon="@drawable/ic_main_project"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_mine"
        android:title="@string/homeFragment_mine"
        android:icon="@drawable/ic_main_mine"
        app:showAsAction="ifRoom"/>

</menu>