<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/articleActivity_share"
        android:textSize="@dimen/sp_16"
        android:gravity="start"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/dp_10"
        android:textColor="@color/colorPrimaryText"
        android:background="@drawable/bg_common_tv"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/articleActivity_copy"
        android:textSize="@dimen/sp_16"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start"
        android:background="@drawable/bg_common_tv"
        android:padding="@dimen/dp_10"
        android:textColor="@color/colorPrimaryText"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/articleActivity_browser"
        android:textSize="@dimen/sp_16"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/bg_common_tv"
        android:padding="@dimen/dp_10"
        android:textColor="@color/colorPrimaryText"
        tools:ignore="RtlSymmetry" />

</LinearLayout>