<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/articleActivity_share"
        android:textSize="@dimen/sp_18"
        android:gravity="center"
        android:paddingTop="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:textColor="@color/primaryText"
        android:paddingStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/articleActivity_copy"
        android:textSize="@dimen/sp_18"
        android:gravity="center"
        android:paddingTop="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:textColor="@color/primaryText"
        android:paddingStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_open_browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/articleActivity_browser"
        android:textSize="@dimen/sp_18"
        android:gravity="center"
        android:paddingTop="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:textColor="@color/primaryText"
        android:paddingStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        tools:ignore="RtlSymmetry" />

</LinearLayout>