<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/common_toolbal" />

    <RelativeLayout
        android:id="@+id/rl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/normal_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </com.scwang.smartrefresh.layout.SmartRefreshLayout>

        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:text="@string/searchActivity_no_data"
            android:textColor="@color/secondaryText"
            android:textSize="@dimen/dp_20"
            android:gravity="center"/>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_history_hot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_hot_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="热门搜索"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/sp_18"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="HardcodedText" />

        <com.zhy.view.flowlayout.TagFlowLayout
            android:id="@+id/tfl_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@id/tv_hot_search"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        </com.zhy.view.flowlayout.TagFlowLayout>

        <TextView
            android:id="@+id/tv_hot_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchActivity_hint3"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/thirdText"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:visibility="invisible"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hot_search"/>

        <TextView
            android:id="@+id/tv_search_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="搜索历史"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/primaryText"
            app:layout_constraintTop_toBottomOf="@id/tfl_tag"
            app:layout_constraintLeft_toLeftOf="@id/tv_hot_search"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="清空"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/secondaryText"
            android:layout_marginRight="@dimen/dp_20"
            app:layout_constraintTop_toTopOf="@id/tv_search_history"
            app:layout_constraintBottom_toBottomOf="@id/tv_search_history"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_search_history">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_history_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchActivity_hint2"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/thirdText"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:visibility="invisible"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_history"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>